# carbon-footprint-awareness-platform

./: Dockerfile  README.md  main.py  pyproject.toml  test_app.py
static/: app.js  index.html  style.css
