[project]
name = "carbon-footprint-awareness-platform"
version = "0.1.0"
description = "A web application to track and reduce carbon footprints using Gemini AI insights"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "google-cloud-aiplatform>=1.38.0",
    "pydantic>=2.0",
    "jinja2>=3.0"
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
